--- a/test-roms/blargg/cpu_instrs/source/Makefile
+++ b/test-roms/blargg/cpu_instrs/source/Makefile
@@ -1,4 +1,15 @@
-all:
-	wla-gb -o test.o '03-op sp,hl.s' && wlalink -r linkfile out.gb
+.PHONY: default all clean
 
+C_TARGETS = $(patsubst %.c, %.gb, $(wildcard *.c))
+ASM_TARGETS = $(patsubst %.s, %.gb, $(wildcard *.s))
 
+all: $(C_TARGETS) $(ASM_TARGETS)
+
+%.o: %.s
+	wla-gb -o test.o $<
+
+%.gb: %.o
+	wlalink linkfile $@
+
+clean:
+	rm -f *.gb *.o
