--- a/test-roms/wla/Makefile
+++ b/test-roms/wla/Makefile
@@ -1,9 +1,8 @@
 .PHONY: default all clean
 
-C_TARGETS = $(patsubst %.c, %.gb, $(wildcard *.c))
 ASM_TARGETS = $(patsubst %.s, %.gb, $(wildcard *.s))
 
-all: $(C_TARGETS) $(ASM_TARGETS)
+all: test.gb
 
 %.o: %.s
 	wla-gb $<
